objects/SVMXC__Service_Order_Dependency__c.object
<CustomObject>
    <description>This Object define dependency among pair of work orders and combined together to form a dependency group.</description>
    <fields>
        <fullName>SVMXC__Dependency_Group__c</fullName>
        <label>Dependency Group</label>
        <referenceTo>SVMXC__Dependency_Management__c</referenceTo>
        <relationshipLabel>Work Order Dependencies</relationshipLabel>
        <relationshipName>Service_Order_Group_Dependencies_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Maximum_Time_Deviation_Units__c</fullName>
        <label>Maximum Time Buffer Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Maximum_Time_Deviation__c</fullName>
        <label>Maximum Time Buffer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Time_Deviation_Units__c</fullName>
        <label>Minimum Time Buffer Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Time_Deviation__c</fullName>
        <label>Minimum Time Buffer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Primary_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Work Order Dependencies (Dependent Work Order)</relationshipLabel>
        <relationshipName>Service_Order_Group_Dependencies_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resource_Dependency__c</fullName>
        <label>Resource Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Resource</fullName>
                </value>
                <value>
                    <fullName>Different Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Secondary_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Work Order Dependencies (Target Work Order)</relationshipLabel>
        <relationshipName>Service_Order_Group_Dependencies1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Targeted_Time_Difference_Units__c</fullName>
        <label>Targeted Time Difference Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Targeted_Time_Difference__c</fullName>
        <label>Targeted Time Difference</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Targeted_Time_Variance_Cost_ID__c</fullName>
        <label>Cost ID For Missed Target Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to Start</fullName>
                    <label>Finish to Start: Primary work order must finish before secondary work order can start</label>
                </value>
                <value>
                    <fullName>Start to Start</fullName>
                    <label>Start to Start: Primary work order must start before secondary work order can start</label>
                </value>
                <value>
                    <fullName>Finish to Finish</fullName>
                    <label>Finish to Finish: Primary work order must finish before secondary work order can finish</label>
                </value>
                <value>
                    <fullName>Start to Finish</fullName>
                    <label>Start to Finish: Primary work order must start before secondary work order can finish</label>
                </value>
                <value>
                    <fullName>Start in Unison</fullName>
                    <label>Start in Unison: Both work orders must start simultaneously</label>
                </value>
                <value>
                    <fullName>Finish in Unison</fullName>
                    <label>Finish in Unison: Both work orders must finish simultaneously</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Order Dependency</label>
    <nameField>
        <displayFormat>WOD-{00000000}</displayFormat>
        <label>Work Order Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>